{
    "name": "IAARInteraction",
    "maps": [
        {
            "name": "ARPlacement",
            "id": "0aa4714b-b8a0-4996-83d6-5623dc0624e2",
            "actions": [
                {
                    "name": "PlaceDragon",
                    "type": "Button",
                    "id": "ccde4910-32cd-428c-a7a0-dd1cef5b7197",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AlignmentDone",
                    "type": "Button",
                    "id": "7c1935e0-512e-43bc-9c88-d1107d75eaeb",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AutoSpawnAlign",
                    "type": "Button",
                    "id": "1ae10110-1335-438e-aebe-4d1550f53b08",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "86118984-363f-4758-8829-62874885d34d",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlaceDragon",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "positive",
                    "id": "4159aa57-00c7-4eda-9176-6ce893ce970f",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlaceDragon",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "7bd23b5e-5b84-4d93-ac0f-3eca11d4b199",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AlignmentDone",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "positive",
                    "id": "ecc419b1-a6e6-4254-9418-0deace0aa248",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AlignmentDone",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "d89729c9-3918-4c72-9f84-19f296632483",
                    "path": "<Gamepad>/{Back}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AutoSpawnAlign",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ab45ce5a-a0d4-4438-9bc8-6136c35a5d08",
                    "path": "<Keyboard>/p",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AutoSpawnAlign",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}